
Added --listunits to list all quantities and the units for each quantity
that wmbusmeteres knows about.

Tomasz Gramza added manual offset setting to the apator162 meter driver.
You can now specify for example: apator162(offset=29) to use the 4 bytes
at offset 29 in the telegram as the water consumption. Other offsets
known to work for apators are 9,12,20,23. This is useful as a final
resort to get your apator162 readout working. You have to test different
offsets until it works. Thanks Tomasz!

Version 1.4.0: 2021-08-09

Fixed a race that sometimes caused wmbusmeters to crash when resetting the dongles,
which happens by default every 23 hours.

Fixed two crashes that could be triggered with broken telegrams. Crashes found by fuzzing.

Improved detection of the amb8465 dongle. The detection code could be confused
if the dongle was receiving a lot of valid telegrams at the same time.

Added telegram content sent by Axioma W1 meter to driver q400,
since Axioma  identifies itself as a q400 meter.

You can now add constant fields using --field_extra_info=floor54 and
--selectfields=....,extra_info,.... to print constant values into
the fields format. --field_xxx=yyy is the new name for --json_xxx=yyy.
The old --json_xxx=yyy continues to work for backwards compatibility.

The timestamp field/key is the time registered by wmbusmeters
when the telegram was received. (The telegram itself sometimes
contain another timestamp when the telegram was sent.)

This timestamp field is encoded using the local time when used
in hr/fields (ie "2021-01-01 12:15.00") but UTC time within json
(ie "2021-01-01T10:15.00Z").

This will stay the same. However now you can explicitly select
the timestamp format for the selected fields. Select timestamp_ut
to print the timestamp as a unix timestamp (ie seconds since 1970-01-01).
Select timestamp_utc for the timestamp in UTC and timestamp_lt for local time.

Daniel Glaser added support for the Aventies water meter! Thanks Daniel!
