@@ -111,6 +111,9 @@ if [ "$?" != "0" ]; then RC="1"; fi
 ./tests/test_meter_extras.sh $PROG
 if [ "$?" != "0" ]; then RC="1"; fi
 
+./tests/test_hex_cmdline.sh $PROG
+if [ "$?" != "0" ]; then RC="1"; fi
+
 if [ -x ../additional_tests.sh ]
 then
     (cd ..; ./additional_tests.sh $PROG)
