@@ -1,4 +1,9 @@
 
+You can now decode a telegram just by supplying hex on the command line:
+wmbusmeters --format=json <hex_string>  MyMeter auto 12345678 NOKEY
+or just
+wmbusmeters <hex_string>
+
 Added --listunits to list all quantities and the units for each quantity
 that wmbusmeteres knows about.
 
